tests/errors/validation/literal-inside-namespace.fn
---
Description: Literal declared inside a namespace
Expected: FN2000
---

namespace BadNs
{
    literal px(value: i32) -> i32
    {
        return value
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
